@@ -1,3 +1,9 @@
+Thu Mar 17 04:55:30 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/fuzz.pl:
+
+          Added check at level 6 for numeric log priorities in DAnCE.
+
 Wed Mar 16 14:34:57 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * ace/os_include/os_pwd.h:
